[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "ffdas"
version = "0.1.1"
requires-python = ">=3.12"
dependencies = ["array-api-compat"]
description = "CUDA-accelerated library of delay-and-sum and related primitives for ultrasound image reconstruction"
keywords = ["beamforming", "cuda", "ultrasound", "gpu", "delay-and-sum"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Physics",
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/BrainEchoLab/ffdas"
Documentation = "https://brainecholab.github.io/ffdas/"
Paper = "https://arxiv.org/abs/2606.13259"

[project.optional-dependencies]
cuda12 = ["ffdas-core-cuda12==0.1.1"]
cuda13 = ["ffdas-core-cuda13==0.1.1"]
dev = ["pytest>=6.0", "pytest-cov"]
docs = ["mkdocs>=1.6,<2", "mkdocs-material>=9.7"]

[tool.scikit-build]
wheel.py-api = "cp312"

[tool.pytest.ini_options]
testpaths = ["tests"]
